--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "numpy>=2.3.4",
     "pytest>=9.0.1",
     "ray>=2.52.1",
+    "tensorboard>=2.20.0",
     "torch>=2.9.1",
     "tqdm>=4.67.1",
 ]
